--- a/app.json
+++ b/app.json
@@ -1,11 +1,11 @@
 {
   "expo": {
-    "name": "ludiceApp",
-    "slug": "ludiceApp",
+    "name": "ludice",
+    "slug": "ludice",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/images/icon.png",
-    "scheme": "ludiceapp",
+    "scheme": "ludice",
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
     "ios": {
