changing app name

--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "ludice",
+    "name": "Ludice",
     "slug": "ludice",
     "version": "1.0.0",
     "orientation": "portrait",
