--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,7 @@ yarn-error.*
 *.tsbuildinfo
 
 app-example
+
+# Firebase configuration files
+google-services.json
+# GoogleService-Info.plist  for iOS when it will be necessary
