--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
     "react-native-toast-message": "^2.3.0",
     "react-native-web": "~0.20.0",
     "react-native-webview": "13.13.5",
-    "tailwindcss": "^3.4.17"
+    "tailwindcss": "^3.4.17",
+    "expo-navigation-bar": "~4.2.5"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
