--- a/package.json
+++ b/package.json
@@ -18,12 +18,14 @@
     "@react-navigation/elements": "^2.3.8",
     "@react-navigation/native": "^7.1.6",
     "expo": "53.0.10",
+    "expo-barcode-scanner": "^13.0.1",
     "expo-blur": "~14.1.5",
     "expo-constants": "~17.1.6",
     "expo-font": "~13.3.1",
     "expo-haptics": "~14.1.4",
     "expo-image": "~2.2.0",
     "expo-linking": "~7.1.5",
+    "expo-navigation-bar": "~4.2.5",
     "expo-router": "~5.0.6",
     "expo-secure-store": "~14.2.3",
     "expo-splash-screen": "~0.30.9",
@@ -42,8 +44,7 @@
     "react-native-toast-message": "^2.3.0",
     "react-native-web": "~0.20.0",
     "react-native-webview": "13.13.5",
-    "tailwindcss": "^3.4.17",
-    "expo-navigation-bar": "~4.2.5"
+    "tailwindcss": "^3.4.17"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
